added the js files

--- a/src/index.html
+++ b/src/index.html
@@ -40,21 +40,30 @@
       <h1 id="title">Just do it.<div id="border"></div>
       </h1>
       <div class="closed">
-      </div>
-      <form id="form">
-        <input class="todo-input" type="text" placeholder="Add a task ">
-      </form>
+        <div class="first-head">
+          <p>  todays todolist</p>
+      <button >     <i class="fa-solid fa-arrows-rotate"> </i>   </button>
+        </div>
 
-      <div id="unlist">
-        <ul class="todo-list">
+        <form id="form">
+          <input class="todo-input"  type="text" placeholder="Add a task ">
 
-        </ul>
+          <button type="button" class="todo-btn"> <i class="fa-solid fa-angle-left"> </i> </button>
+        </form>
+  
+        <div id="unlist">
+          <ul class="todo-list">
+  
+          </ul>
+        </div>
       </div>
-    </div>
+      </div>
+  
 
 
 
 </body>
 <script src="index.js"></script>
+<script src="https://kit.fontawesome.com/fa3789ca92.js" crossorigin="anonymous"></script>
 
 </html>
