--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="./index.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!-- Google Font: Quick Sand -->
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-  <div class="version">
-    <div class="demo version-section"><a href="https://github.com/tusharnankani/ToDoList" class="github-corner">
+
+    <!-- <div class="demo version-section"><a href="https://github.com/tusharnankani/ToDoList" class="github-corner">
         <svg width="80" height="80" viewBox="0 0 250 250"
           style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; left: 0; transform: scale(-1, 1);">
           <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
@@ -29,7 +29,7 @@
             d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
             fill="currentColor" class="octo-body"></path>
         </svg></a>
-    </div>
+    </div> -->
 
     <div id="header">
       <div class="flexrow-container">
@@ -37,18 +37,20 @@
         <div class="light-theme theme-selector"></div>
         <div class="darker-theme theme-selector"></div>
       </div>
-      <h1 id="title">Just do it.<div id="border"></div>
-      </h1>
+      <p id="title">Just do it.
+      </p>
+      <hr>
       <div class="closed">
         <div class="first-head">
           <p>  todays todolist</p>
-      <button >     <i class="fa-solid fa-arrows-rotate"> </i>   </button>
+          <hr>
+      <button type="button">     <i class="fa-solid fa-arrows-rotate"> </i>   </button>
         </div>
 
         <form id="form">
           <input class="todo-input"  type="text" placeholder="Add a task ">
-
           <button type="button" class="todo-btn"> <i class="fa-solid fa-angle-left"> </i> </button>
+          <hr>
         </form>
   
         <div id="unlist">
@@ -61,9 +63,10 @@
   
 
 
-
+      <script src="index.js"></script>
+      <script src="https://kit.fontawesome.com/fa3789ca92.js" crossorigin="anonymous"></script>
 </body>
-<script src="index.js"></script>
-<script src="https://kit.fontawesome.com/fa3789ca92.js" crossorigin="anonymous"></script>
+
+
 
 </html>
