--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
         </div>
 
         <form id="form">
-          <input class="todo-input"  type="text" placeholder="Add a task ">
+          <input class="todo-input"  type="text" placeholder=" can you Add a task ">
           <button type="button" class="todo-btn"> <i class="fa-solid fa-angle-left"> </i> </button>
           <hr>
         </form>
