--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
       <hr>
       <div class="closed">
         <div class="first-head">
-          <p>  todays todolist</p>
+          <p>  today todolist</p>
           <hr>
       <button type="button">     <i class="fa-solid fa-arrows-rotate"> </i>   </button>
         </div>
