created remove and add button

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         <div class="light-theme theme-selector"></div>
         <div class="darker-theme theme-selector"></div>
       </div>
-      <p id="title">Just do it.
+      <p id="title">Just do it today.
       </p>
       <hr>
       <div class="closed">
