added interactive functionality

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
             <h1> just to it </h1>
             <div class="list-container">
                 <div class="list-heading">
-                    <h2 class="">Today's Task</h2>
+                    <h2 class="">Todays Task</h2>
                     <button type="button" class="refresh-list"><i class="fa-solid fa-arrows-rotate"></i></button>
                 </div>
                 <hr>
